# flight-network-planner

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  actualgates.json  config.yaml  config.yml  gates.txt  gates2.txt  install.sh  out.txt  plan.json  run.sh  test.py  testconfig.yaml  testconfig.yml
.github/workflows/: build.yml  cargo-upgrade.yaml  publish.yml  virus_total.yml
astre/: gates.txt  out.txt  testconfig.yml
data/: default_config.yml
mfnp/: __init__.py  __main__.py  defaultconfig.yml  getconfig.py  run.py  utils.py
mfnp_old/: __init__.py  defaultconfig.yml  run.py  utils.py
src/: config.rs  flight.rs  flight_data.rs  flight_type.rs  main.rs  run.rs  stats.rs  types.rs  update.rs  utils.rs
src/cmd/: mod.rs  run.rs  stats.rs  update.rs
src/types/: config.rs  flight.rs  flight_data.rs  flight_type.rs  flight_utils.rs  fng.rs  gate.rs
test/: actualgates.txt  plan.json  test.py  testconfig.yml
