[package]
name = "flight-network-planner"
version = "1.1.0"
edition = "2021"
description = "Minecart Rapid Transit Flight Network Planner for airlines, made by __7d"
authors = ["__7d"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.193", features = ["derive"] }
serde_yaml = "^0.9.27"
reqwest = { version = "^0.12.1", features = ["blocking"] }
log = "^0.4.20"
pretty_env_logger = "^0.5.0"
clap = { version = "^4.4.10", features = ["derive"] }
clap_complete = "^4.4.4"
clap_complete_fig = "^4.4.2"
cached = "^0.49.2"
anyhow = { version = "^1.0.75", features = ["backtrace"] }
counter = "^0.5.7"
itertools = "^0.12.0"
regex = "^1.10.2"
csv = "^1.3.0"
smol_str = { version = "^0.2.0", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 3
