[package]
name = "flight-network-planner"
version = "1.1.1"
edition = "2021"
description = "Minecart Rapid Transit Flight Network Planner for airlines, made by __7d"
authors = ["__7d"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.204", features = ["derive"] }
serde_yaml = "^0.9.34"
reqwest = { version = "^0.12.5", features = ["blocking"] }
log = "^0.4.22"
pretty_env_logger = "^0.5.0"
clap = { version = "^4.5.9", features = ["derive"] }
clap_complete = "^4.5.7"
clap_complete_fig = "^4.5.1"
cached = "^0.53.0"
anyhow = { version = "^1.0.86", features = ["backtrace"] }
counter = "^0.6.0"
itertools = "^0.13.0"
regex = "^1.10.5"
csv = "^1.3.0"
smol_str = { version = "^0.2.2", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 3
